@@ -12,6 +12,7 @@ Changes in 0.14.11:
   * rename --use-macro and --use-flavor options for cook to --macro and --flavor
   * support new cook syntax: cvc cook <trove>[flavor] to set the troves flavor
     while cooking
+  * fixed rq output when iterating over subtroves within a trove or group
 
 Changes in 0.14.10:
   * FlavorMap sense wasn't set right for base instruction set
